.hdr__menu-wrap 100vh, sched__item-link fix

--- a/src/sass/index/media.sass
+++ b/src/sass/index/media.sass
@@ -122,7 +122,7 @@
         left: 0
         bottom: 0
         padding: 10px
-        height: 100vh
+        height: 100%
         width: 300px
         transform: translateX(100%)
         transition: transform .25s
